// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Checkbox disabled 1`] = `
.c0 {
  background-color: transparent;
  padding: 15px;
  height: auto;
}

.c2 {
  position: relative;
  display: inline-block;
  width: 22px;
  height: 22px;
}

.c5 {
  position: absolute;
  cursor: not-allowed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgb(251,250,252);
  border: solid 2px rgb(197,197,197);
  -webkit-transition: 0.4s;
  transition: 0.4s;
}

.c3 {
  display: none;
}

.c3:checked + .c4 {
  background-color: rgb(70,55,134);
}

.c3:checked + .c4:after {
  content: '';
  position: absolute;
  width: 10px;
  height: 4px;
  background: transparent;
  top: 4px;
  left: 2.5px;
  border: 3px solid white;
  border-top: none;
  border-right: none;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  className="c0"
  height="auto"
>
  <div
    checked={false}
    className="c1"
    disabled={true}
    onChange={[Function]}
  >
    <label
      checked={false}
      className="c2"
      disabled={true}
    >
      <input
        checked={false}
        className="c3"
        disabled={true}
        name="checkbox"
        onChange={[Function]}
        type="checkbox"
      />
      <span
        checked={false}
        className="c4 c5"
        disabled={true}
      />
    </label>
  </div>
</div>
`;

exports[`Storyshots Checkbox touched 1`] = `
.c0 {
  background-color: transparent;
  padding: 15px;
  height: auto;
}

.c2 {
  position: relative;
  display: inline-block;
  width: 22px;
  height: 22px;
}

.c5 {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: white;
  border: solid 2px rgb(70,55,134);
  -webkit-transition: 0.4s;
  transition: 0.4s;
}

.c3 {
  display: none;
}

.c3:checked + .c4 {
  background-color: rgb(70,55,134);
}

.c3:checked + .c4:after {
  content: '';
  position: absolute;
  width: 10px;
  height: 4px;
  background: transparent;
  top: 4px;
  left: 2.5px;
  border: 3px solid white;
  border-top: none;
  border-right: none;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  className="c0"
  height="auto"
>
  <div
    checked={true}
    className="c1"
    disabled={false}
    onChange={[Function]}
  >
    <label
      checked={true}
      className="c2"
      disabled={false}
    >
      <input
        checked={true}
        className="c3"
        disabled={false}
        name="checkbox"
        onChange={[Function]}
        type="checkbox"
      />
      <span
        checked={true}
        className="c4 c5"
        disabled={false}
      />
    </label>
  </div>
</div>
`;

exports[`Storyshots Checkbox untouched 1`] = `
.c0 {
  background-color: transparent;
  padding: 15px;
  height: auto;
}

.c2 {
  position: relative;
  display: inline-block;
  width: 22px;
  height: 22px;
}

.c5 {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: white;
  border: solid 2px rgb(70,55,134);
  -webkit-transition: 0.4s;
  transition: 0.4s;
}

.c3 {
  display: none;
}

.c3:checked + .c4 {
  background-color: rgb(70,55,134);
}

.c3:checked + .c4:after {
  content: '';
  position: absolute;
  width: 10px;
  height: 4px;
  background: transparent;
  top: 4px;
  left: 2.5px;
  border: 3px solid white;
  border-top: none;
  border-right: none;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  className="c0"
  height="auto"
>
  <div
    checked={false}
    className="c1"
    disabled={false}
    onChange={[Function]}
  >
    <label
      checked={false}
      className="c2"
      disabled={false}
    >
      <input
        checked={false}
        className="c3"
        disabled={false}
        name="checkbox"
        onChange={[Function]}
        type="checkbox"
      />
      <span
        checked={false}
        className="c4 c5"
        disabled={false}
      />
    </label>
  </div>
</div>
`;

exports[`Storyshots Checkbox w/error 1`] = `
.c0 {
  background-color: transparent;
  padding: 15px;
  height: auto;
}

.c2 {
  position: relative;
  display: inline-block;
  width: 22px;
  height: 22px;
}

.c5 {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: white;
  border: solid 2px rgb(202,25,0);
  -webkit-transition: 0.4s;
  transition: 0.4s;
}

.c3 {
  display: none;
}

.c3:checked + .c4 {
  background-color: rgb(202,25,0);
}

.c3:checked + .c4:after {
  content: '';
  position: absolute;
  width: 10px;
  height: 4px;
  background: transparent;
  top: 4px;
  left: 2.5px;
  border: 3px solid white;
  border-top: none;
  border-right: none;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  className="c0"
  height="auto"
>
  <div
    checked={true}
    className="c1"
    disabled={false}
    onChange={[Function]}
  >
    <label
      checked={true}
      className="c2"
      disabled={false}
    >
      <input
        checked={true}
        className="c3"
        disabled={false}
        name="checkbox"
        onChange={[Function]}
        type="checkbox"
      />
      <span
        checked={true}
        className="c4 c5"
        disabled={false}
      />
    </label>
  </div>
</div>
`;

exports[`Storyshots Checkbox w/warning 1`] = `
.c0 {
  background-color: transparent;
  padding: 15px;
  height: auto;
}

.c2 {
  position: relative;
  display: inline-block;
  width: 22px;
  height: 22px;
}

.c5 {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: white;
  border: solid 2px rgb(255,152,0);
  -webkit-transition: 0.4s;
  transition: 0.4s;
}

.c3 {
  display: none;
}

.c3:checked + .c4 {
  background-color: rgb(255,152,0);
}

.c3:checked + .c4:after {
  content: '';
  position: absolute;
  width: 10px;
  height: 4px;
  background: transparent;
  top: 4px;
  left: 2.5px;
  border: 3px solid white;
  border-top: none;
  border-right: none;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  className="c0"
  height="auto"
>
  <div
    checked={true}
    className="c1"
    disabled={false}
    onChange={[Function]}
  >
    <label
      checked={true}
      className="c2"
      disabled={false}
    >
      <input
        checked={true}
        className="c3"
        disabled={false}
        name="checkbox"
        onChange={[Function]}
        type="checkbox"
      />
      <span
        checked={true}
        className="c4 c5"
        disabled={false}
      />
    </label>
  </div>
</div>
`;
